--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 .tg .tg-titleCell{border-color:#000000;text-align:center;vertical-align:center;width:50%;height:5%;}
 .tg .tg-dataCell{border-color:#000000;text-align:center;vertical-align:center;width:50%;height:20%;font-size:250px;}
 .di {height:100%; width:100%; font-size:250px; text-align:center; vertical-align:center;}
-.dd {height:100%; width:100%; font-size:250px; text-align:center; vertical-align:center;}
+.dd {height:100%; width:100%; font-size:250px; text-align:center; vertical-align:center; -webkit-appearance:none;}
 </style>
 
 </head>
